# CSLib

./: .gitignore  Makefile  README.md
c/: .gitignore
c/docs/html/: annotated.html  annotated_dup.js  classes.html  cmpfn_8h.html  cmpfn_8h.js  cmpfn_8h_source.html  cslib_8h.html  cslib_8h.js  cslib_8h_source.html  exception_8h.html  exception_8h.js  exception_8h_source.html  files.html  files.js  functions.html  functions_vars.html  generic_8h.html  generic_8h.js  generic_8h_source.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  random_8h.html  random_8h.js  random_8h_source.html  simpio_8h.html  simpio_8h.js  simpio_8h_source.html  strlib_8h.html  strlib_8h.js  strlib_8h_source.html  structexception.html  structexception_context_block.html  (+6 more)
c/docs/html/search/: all_0.js  (+64 more)
c/docs/latex/: annotated.tex  refman.tex  structexception.tex  structexception_context_block.tex  union_generic_type.tex
c/doxy/: Doxyfile
c/examples/: CharHistogram  CharHistogram.c  Makefile  NumberDelimiter  NumberDelimiter.c  ScrabbleScoreChecker  ScrabbleScoreChecker.c
c/include/: cmpfn.h  cslib.h  generic.h  simpio.h  strlib.h
c/src/: simpio.c
ide/clion/macos/: CMakeLists.txt  HelloConsole.c
ide/clion/windows/: CMakeLists.txt  HelloConsole.c
ide/codeblocks/linux/: HelloConsole.c
ide/codeblocks/macos/: StarterProject.cbp  StarterProject.layout
ide/codeblocks/windows/: StarterProject.cbp
ide/makefile/: HelloConsole.c  Makefile
ide/src/: HelloConsole.c
